--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <p><strong>E-mail: </strong>diazrodriguez.jr@gmail.com</p>
           <p><strong>Tel: </strong>314 475 61 68 - 567 25 87</p>
         </div>
-        <a href="https://www.facebook.com/JoRoDiRo" class="social-link facebook" target="_blank"></a>
+        <a href="https://github.com/jrdiazr" class="social-link github" target="_blank"></a>
         <a href="https://www.linkedin.com/in/jose-roberto-diaz-rodriguez-837bb523/" class="social-link linkedin" target="_blank"></a>
         <a href="https://platzi.com/@jrdiaz/" class="social-link platzi" target="_blank"></a>
       </div>
