--- a/index.html
+++ b/index.html
@@ -145,14 +145,16 @@
     </section>
     <footer id="contacto" class="contacto">
       <div class="container">
-        <div class="">
+        <div class="info-container">
           <h2>Contacto:</h2>
           <p><strong>E-mail: </strong>diazrodriguez.jr@gmail.com</p>
           <p><strong>Tel: </strong>314 475 61 68 - 567 25 87</p>
         </div>
-        <a href="https://github.com/jrdiazr" class="social-link github" target="_blank"></a>
-        <a href="https://www.linkedin.com/in/jose-roberto-diaz-rodriguez-837bb523/" class="social-link linkedin" target="_blank"></a>
-        <a href="https://platzi.com/@jrdiaz/" class="social-link platzi" target="_blank"></a>
+        <div class="social-container">
+          <a href="https://github.com/jrdiazr" class="social-link github" target="_blank"></a>
+          <a href="https://www.linkedin.com/in/jose-roberto-diaz-rodriguez-837bb523/" class="social-link linkedin" target="_blank"></a>
+          <a href="https://platzi.com/@jrdiaz/" class="social-link platzi" target="_blank"></a>
+        </div>
       </div>
     </footer>
   </body>
